objects/Technical_Profile_Competitors__c.object
<CustomObject>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8x8</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>24x7</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>Solution_Category__c</referenceTo>
        <relationshipLabel>Technical Profile Competito</relationshipLabel>
        <relationshipName>Technical_Profile_Competito</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Profile__c</fullName>
        <label>Technical Profile</label>
        <referenceTo>Technical_Profile__c</referenceTo>
        <relationshipLabel>Technical Profile Competito</relationshipLabel>
        <relationshipName>Technical_Profile_Competito</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TechnichalProfileSC_Key__c</fullName>
        <externalId>true</externalId>
        <label>TechnichalProfileSC Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Technical Profile Competitors</label>
    <nameField>
        <label>Technical Profile Competitors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Profile Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>